--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3"
 services:
-    parser-server:
+    parse-server:
         build: ./parse-server
         depends_on:
           - db
@@ -15,29 +15,20 @@ services:
             - ./data:/data/db
         networks:
             - server
-    dashbord:
-        build: ./dashbord
-        depends_on:
-            parse-server
-        networks:
-            - server
-        ports:
-            - "4040"
-        command: "parse-dashboard --appId nodelover --masterKey nodelover --serverURL 'http://parse-server:1337/parse' --appName Coco"
-    front:
-        image: node:9.2.0-slim
-        depends_on:
-            parse-server
-        user: "node"
-        working_dir: /home/node/app
-        volumes:
-            - ./front:/home/node/app
-        networks:
-            - server
-        ports:
-            - "8080:8080"
-            - "80:80"
-        command: "npm run dev"
+    # front:
+    #     image: node:9.2.0-slim
+    #     depends_on:
+    #         - parse-server
+    #     user: "node"
+    #     working_dir: /home/node/app
+    #     volumes:
+    #         - ./front:/home/node/app
+    #     networks:
+    #         - server
+    #     ports:
+    #         - "8080:8080"
+    #         - "80:80"
+    #     command: "npm run dev"
 
 networks:
     server:
