--- a/front/package.json
+++ b/front/package.json
@@ -8,13 +8,16 @@
     "start": "cross-env NODE_ENV=production node server",
     "build": "rimraf dist && npm run build:client && npm run build:server",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
-    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules"
+    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
+    "dashboard": "parse-dashboard --appId nodelover --masterKey nodelover --serverURL 'http://0.0.0.0:1337/parse' --appName Coco"
   },
   "engines": {
     "node": ">=7.0",
     "npm": ">=4.0"
   },
   "dependencies": {
+    "at-ui": "^1.3.1",
+    "at-ui-style": "^1.5.0",
     "compression": "^1.7.1",
     "cross-env": "^5.1.1",
     "es6-promise": "^4.1.1",
@@ -25,7 +28,9 @@
     "parse": "^1.10.2",
     "route-cache": "0.4.3",
     "serve-favicon": "^2.4.5",
+    "swiper": "^4.0.7",
     "vue": "^2.5.3",
+    "vue-awesome-swiper": "^3.0.2",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.3",
     "vuex": "^3.0.1",
@@ -41,6 +46,7 @@
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "parse-dashboard": "^1.1.2",
     "rimraf": "^2.6.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
